@@ -12,14 +12,22 @@ import org.elasticsearch.xpack.idp.saml.sp.SamlServiceProvider;
 import org.elasticsearch.xpack.idp.saml.sp.ServiceProviderDefaults;
 import org.elasticsearch.xpack.idp.saml.support.SamlFactory;
 import org.elasticsearch.xpack.idp.saml.support.SamlInit;
+import org.elasticsearch.xpack.idp.saml.support.SamlInitiateSingleSignOnAttributes;
 import org.elasticsearch.xpack.idp.saml.support.XmlValidator;
 import org.elasticsearch.xpack.idp.saml.test.IdpSamlTestCase;
 import org.junit.Before;
+import org.opensaml.saml.saml2.core.Attribute;
+import org.opensaml.saml.saml2.core.AttributeStatement;
 import org.opensaml.saml.saml2.core.Response;
 
-import java.net.URL;
+import java.net.URI;
 import java.time.Clock;
 import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import static org.hamcrest.Matchers.containsString;
@@ -46,20 +54,63 @@ public class SuccessfulAuthenticationResponseMessageBuilderTests extends IdpSaml
     }
 
     public void testSignedResponseIsValidAgainstXmlSchema() throws Exception {
-        final Response response = buildResponse();
+        final Response response = buildResponse(null);
         final String xml = super.toString(response);
         assertThat(xml, containsString("SignedInfo>"));
         validator.validate(xml);
     }
 
-    private Response buildResponse() throws Exception {
+    public void testSignedResponseWithCustomAttributes() throws Exception {
+        // Create custom attributes
+        Map<String, List<String>> attributeMap = new HashMap<>();
+        attributeMap.put("customAttr1", Collections.singletonList("value1"));
+
+        List<String> multipleValues = new ArrayList<>();
+        multipleValues.add("value2A");
+        multipleValues.add("value2B");
+        attributeMap.put("customAttr2", multipleValues);
+        SamlInitiateSingleSignOnAttributes attributes = new SamlInitiateSingleSignOnAttributes(attributeMap);
+
+        // Build response with custom attributes
+        final Response response = buildResponse(attributes);
+        final String xml = super.toString(response);
+
+        // Validate that response is correctly signed
+        assertThat(xml, containsString("SignedInfo>"));
+        validator.validate(xml);
+
+        // Verify custom attributes are included
+        boolean foundCustomAttr1 = false;
+        boolean foundCustomAttr2 = false;
+
+        for (AttributeStatement statement : response.getAssertions().get(0).getAttributeStatements()) {
+            for (Attribute attribute : statement.getAttributes()) {
+                String name = attribute.getName();
+                if (name.equals("customAttr1")) {
+                    foundCustomAttr1 = true;
+                    assertEquals(1, attribute.getAttributeValues().size());
+                    assertThat(attribute.getAttributeValues().get(0).getDOM().getTextContent(), containsString("value1"));
+                } else if (name.equals("customAttr2")) {
+                    foundCustomAttr2 = true;
+                    assertEquals(2, attribute.getAttributeValues().size());
+                    assertThat(attribute.getAttributeValues().get(0).getDOM().getTextContent(), containsString("value2A"));
+                    assertThat(attribute.getAttributeValues().get(1).getDOM().getTextContent(), containsString("value2B"));
+                }
+            }
+        }
+
+        assertTrue("Custom attribute 'customAttr1' not found in SAML response", foundCustomAttr1);
+        assertTrue("Custom attribute 'customAttr2' not found in SAML response", foundCustomAttr2);
+    }
+
+    private Response buildResponse(SamlInitiateSingleSignOnAttributes customAttributes) throws Exception {
         final Clock clock = Clock.systemUTC();
 
         final SamlServiceProvider sp = mock(SamlServiceProvider.class);
         final String baseServiceUrl = "https://" + randomAlphaOfLength(32) + ".us-east-1.aws.found.io/";
         final String acs = baseServiceUrl + "api/security/saml/callback";
         when(sp.getEntityId()).thenReturn(baseServiceUrl);
-        when(sp.getAssertionConsumerService()).thenReturn(new URL(acs));
+        when(sp.getAssertionConsumerService()).thenReturn(URI.create(acs).toURL());
         when(sp.getAuthnExpiry()).thenReturn(Duration.ofMinutes(10));
         when(sp.getAttributeNames()).thenReturn(new SamlServiceProvider.AttributeNames("principal", null, null, null));
 
@@ -75,7 +126,7 @@ public class SuccessfulAuthenticationResponseMessageBuilderTests extends IdpSaml
             clock,
             idp
         );
-        return builder.build(user, null);
+        return builder.build(user, null, customAttributes);
     }
 
 }
